feat: integrate with KTV

--- a/framework/examples/ios-demo/podfile
+++ b/framework/examples/ios-demo/podfile
@@ -5,8 +5,14 @@ install! 'cocoapods',
 
 workspace 'HippyDemo.xcworkspace'
 
+source "https://pod-go.woa.com/QQFrameworks/pod_specs/"
+
 target "HippyDemo" do
+    use_frameworks!
     pod 'hippy', :path => '../../..'
+    pod 'HippyRender'
+    pod 'shared', :path => '../../../../HippyKotlinDemo/shared'
+    pod 'NTWebImageKit', '~> 0.1.1'
 end
 
 def rewriteConfigFile(path, originString, targetString)
@@ -19,6 +25,23 @@ def rewriteConfigFile(path, originString, targetString)
             end
         end
     end
+end
+
+static_frameworks = ['hippy'] # <- swift libraries names
+
+# Make all the other frameworks into static frameworks by overriding the static_framework? function to return true
+pre_install do |installer|
+  installer.pod_targets.each do |pod|
+    if static_frameworks.include?(pod.name)
+      puts "Overriding the static_framework? method for #{pod.name}"
+      def pod.static_framework?;
+        true
+      end
+      def pod.build_type;
+        Pod::BuildType.static_library
+      end
+    end
+  end
 end
 
 post_install do |installer|
